feat/add-currency-screen-top-part

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Xpense Track</string>
     <string name="title_activity_add_transaction">AddTransactionActivity</string>
     <string name="title_activity_currency">CurrencyActivity</string>
+    <string name="euro_symbol">Euro symbol</string>
 </resources>
