--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_auth">AuthActivity</string>
     <string name="log_in">Log in</string>
     <string name="sign_up">Sign up</string>
+    <string name="transactions">Transactions</string>
 </resources>
