fix/euro-symbol-and-strings-in-balance-overview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <!-- General -->
     <string name="app_name">Xpense Track</string>
     <string name="app_icon">App Icon</string>
+    <string name="transactions">Transactions</string>
+
+    <!-- Home -->
+    <string name="total_balance">Total Balance</string>
+    <string name="income">Income</string>
+    <string name="expenses">Expenses</string>
 
     <!-- Add Transaction -->
     <string name="title_activity_add_transaction">AddTransactionActivity</string>
@@ -14,5 +20,4 @@
     <string name="title_activity_auth">AuthActivity</string>
     <string name="log_in">Log in</string>
     <string name="sign_up">Sign up</string>
-    <string name="transactions">Transactions</string>
 </resources>
